Check mark fix
Check mark symbol was not showing when hovering list; added font-family
to fix

--- a/css/style.css
+++ b/css/style.css
@@ -1614,6 +1614,7 @@ a.breadcrumbs-active:hover {
     max-width: 210px;
     margin: 0;
     padding: 8px 30px 12px 15px;
+    font-family: "Roboto";
     font-size: 16px;
     font-weight: 500;
     color: #fff;
